tests/e2e/scarb/snapshots/e2e__scarb__manifest_diagnostics__invalid_manifest_reports_diagnostics.snap
---
source: tests/e2e/scarb/manifest_diagnostics.rs
description: "// → Scarb.toml\n[package]\nname = 1\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n// → src/lib.cairo\nfn main() {}"
expression: "diagnostics_report(&mut ls, &[\"Scarb.toml\"])"
snapshot_kind: text
---
diagnostics:
- url: '[ROOT_URL]Scarb.toml'
  diagnostics:
  - related_code: ''
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 0
      severity: 1
      source: scarb
      message: |-
        failed to parse manifest at: [ROOT]/Scarb.toml

        Caused by:
            TOML parse error at line 2, column 8
              |
            2 | name = 1
              |        ^
            invalid type: integer `1`, expected a string
